[package]
name = "pallet-dex-rpc"
version = "0.1.0"
edition = "2021"
description = "The RPC interface for the DEX pallet"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
homepage = "https://github.com/MathisWellmann/substrate-dex-node"
publish = false
repository = "https://github.com/MathisWellmann/substrate-dex-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "^1.3"
jsonrpsee = { version = "0.14.0", features = ["server", "macros"]}
futures = "^0.3.16"
thiserror = "^1.0"
url = "^2.2"

sp-core = { version = "6.0.0", default-features = false, git = "http://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { version = "6.0.0", default-features = false, git = "http://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "http://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-blockchain = { version = "4.0.0-dev", default-features = false, git = "http://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "http://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-application-crypto = { version = "6.0.0", default-features = false, git = "http://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

pallet-dex = { version = "^0.1", path = ".."}
pallet-dex-runtime-api = { version = "^0.1", path = "./runtime-api" }
