[package]
name = "pallet-dex-runtime-api"
version = "0.1.1"
edition = "2021"
description = "Runtime api for DEX pallet"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
homepage = "https://github.com/MathisWellmann/substrate-dex-node"
publish = false
repository = "https://github.com/MathisWellmann/substrate-dex-node"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
codec = { package = "parity-scale-codec", version = "^3.0", default-features = false, features = ["derive"]}

pallet-dex = { version = "^0.2", default-features = false, path = "../../../dex"}

[features]
default = ["std"]
std = [
  "sp-api/std",
  "frame-system/std",
]